--- a/Training.ipynb
+++ b/Training.ipynb
@@ -51,7 +51,7 @@
     {
      "data": {
       "text/plain": [
-       "(161, 5)"
+       "(161, 100)"
       ]
      },
      "execution_count": 4,
@@ -69,10 +69,20 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/manvishn/Desktop/DM/mealNomeal/env/lib/python3.7/site-packages/sklearn/linear_model/logistic.py:432: FutureWarning: Default solver will be changed to 'lbfgs' in 0.22. Specify a solver to silence this warning.\n",
+      "  FutureWarning)\n",
+      "/Users/manvishn/Desktop/DM/mealNomeal/env/lib/python3.7/site-packages/sklearn/linear_model/logistic.py:432: FutureWarning: Default solver will be changed to 'lbfgs' in 0.22. Specify a solver to silence this warning.\n",
+      "  FutureWarning)\n"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "AUC: 72.56%, accuracy: 65.22% \n",
+      "AUC: 72.80%, accuracy: 63.98% \n",
       "\n",
       "Pipeline(memory=None,\n",
       "         steps=[('standardscaler',\n",
@@ -88,9 +98,9 @@
       "         verbose=False)\n",
       "\n",
       "\n",
-      "Precision Score :0.6551891237044016\n",
-      "Recall Score : 0.6521739130434783\n",
-      "AUC: 73.16%, accuracy: 66.46% \n",
+      "Precision Score :0.6394472531176273\n",
+      "Recall Score : 0.639751552795031\n",
+      "AUC: 72.12%, accuracy: 66.46% \n",
       "\n",
       "Pipeline(memory=None,\n",
       "         steps=[('minmaxscaler', MinMaxScaler(copy=True, feature_range=(0, 1))),\n",
@@ -105,9 +115,9 @@
       "         verbose=False)\n",
       "\n",
       "\n",
-      "Precision Score :0.6742292990127328\n",
+      "Precision Score :0.6676807107282272\n",
       "Recall Score : 0.6645962732919255\n",
-      "AUC: 72.63%, accuracy: 65.84% \n",
+      "AUC: 73.28%, accuracy: 63.98% \n",
       "\n",
       "Pipeline(memory=None,\n",
       "         steps=[('minmaxscaler', MinMaxScaler(copy=True, feature_range=(0, 1))),\n",
@@ -120,9 +130,9 @@
       "         verbose=False)\n",
       "\n",
       "\n",
-      "Precision Score :0.6688803899098402\n",
-      "Recall Score : 0.6583850931677019\n",
-      "AUC: 67.24%, accuracy: 63.98% \n",
+      "Precision Score :0.6610529686613004\n",
+      "Recall Score : 0.639751552795031\n",
+      "AUC: 72.87%, accuracy: 68.32% \n",
       "\n",
       "RandomForestClassifier(bootstrap=True, class_weight=None, criterion='gini',\n",
       "                       max_depth=None, max_features='auto', max_leaf_nodes=None,\n",
@@ -133,18 +143,8 @@
       "                       verbose=0, warm_start=False)\n",
       "\n",
       "\n",
-      "Precision Score :0.645253216088585\n",
-      "Recall Score : 0.639751552795031\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/local/ASUAD/mvishnoi/.local/lib/python3.6/site-packages/sklearn/linear_model/logistic.py:432: FutureWarning: Default solver will be changed to 'lbfgs' in 0.22. Specify a solver to silence this warning.\n",
-      "  FutureWarning)\n",
-      "/home/local/ASUAD/mvishnoi/.local/lib/python3.6/site-packages/sklearn/linear_model/logistic.py:432: FutureWarning: Default solver will be changed to 'lbfgs' in 0.22. Specify a solver to silence this warning.\n",
-      "  FutureWarning)\n"
+      "Precision Score :0.6858178053830227\n",
+      "Recall Score : 0.6832298136645962\n"
      ]
     }
    ],
@@ -199,7 +199,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.7.5"
   }
  },
  "nbformat": 4,
