--- a/Cross_validation.ipynb
+++ b/Cross_validation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,8 +18,8 @@
     "from sklearn.metrics import roc_auc_score as AUC, accuracy_score as accuracy\n",
     "from sklearn.svm import SVC as SVM\n",
     "from sklearn.metrics import precision_score\n",
-    "from sklearn.metrics import recall_score,f1_score\n",
-    "from sklearn.model_selection import cross_val_score,KFold\n",
+    "from sklearn.metrics import recall_score\n",
+    "from sklearn.model_selection import cross_val_score\n",
     "from sklearn.linear_model import SGDClassifier as SGD\n",
     "from sklearn.gaussian_process import GaussianProcessClassifier as GPC\n",
     "from sklearn.ensemble import AdaBoostClassifier as ABC\n",
@@ -30,134 +30,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>0__spkt_welch_density__coeff_2</th>\n",
-       "      <th>0__fft_coefficient__coeff_1__attr_\"abs\"</th>\n",
-       "      <th>0__partial_autocorrelation__lag_1</th>\n",
-       "      <th>0__autocorrelation__lag_1</th>\n",
-       "      <th>0__autocorrelation__lag_2</th>\n",
-       "      <th>y</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>14323.358128</td>\n",
-       "      <td>1141.209142</td>\n",
-       "      <td>0.973038</td>\n",
-       "      <td>0.973038</td>\n",
-       "      <td>0.923763</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>208.004862</td>\n",
-       "      <td>468.304575</td>\n",
-       "      <td>0.889677</td>\n",
-       "      <td>0.889677</td>\n",
-       "      <td>0.755520</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>4685.229641</td>\n",
-       "      <td>660.325661</td>\n",
-       "      <td>0.992158</td>\n",
-       "      <td>0.992158</td>\n",
-       "      <td>0.961695</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>11895.273616</td>\n",
-       "      <td>804.604590</td>\n",
-       "      <td>0.964971</td>\n",
-       "      <td>0.964971</td>\n",
-       "      <td>0.897135</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>4328.383081</td>\n",
-       "      <td>1086.189694</td>\n",
-       "      <td>0.982644</td>\n",
-       "      <td>0.982644</td>\n",
-       "      <td>0.935608</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   0__spkt_welch_density__coeff_2  0__fft_coefficient__coeff_1__attr_\"abs\"  \\\n",
-       "0                    14323.358128                              1141.209142   \n",
-       "1                      208.004862                               468.304575   \n",
-       "2                     4685.229641                               660.325661   \n",
-       "3                    11895.273616                               804.604590   \n",
-       "4                     4328.383081                              1086.189694   \n",
-       "\n",
-       "   0__partial_autocorrelation__lag_1  0__autocorrelation__lag_1  \\\n",
-       "0                           0.973038                   0.973038   \n",
-       "1                           0.889677                   0.889677   \n",
-       "2                           0.992158                   0.992158   \n",
-       "3                           0.964971                   0.964971   \n",
-       "4                           0.982644                   0.982644   \n",
-       "\n",
-       "   0__autocorrelation__lag_2    y  \n",
-       "0                   0.923763  1.0  \n",
-       "1                   0.755520  0.0  \n",
-       "2                   0.961695  1.0  \n",
-       "3                   0.897135  1.0  \n",
-       "4                   0.935608  1.0  "
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "data = pd.read_csv( \"data/train_file.csv\")\n",
-    "data.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
-    "labels = data['y']\n",
-    "train_data = data.drop(columns = ['y'])"
+    "data = pd.read_csv(\"data/features_file.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,8 +48,6 @@
     "    make_pipeline( StandardScaler(), LR()),\n",
     "    make_pipeline( MinMaxScaler(), LR()),\n",
     "    make_pipeline( MinMaxScaler(), SVM(gamma='auto', probability=True)),\n",
-    "    make_pipeline( StandardScaler(), SVM(kernel = 'poly',degree = 3,coef0 = 1,C=5)),\n",
-    "    SVM(kernel = 'rbf',gamma = 5,C=0.01),\n",
     "    RF( n_estimators = 100, min_samples_leaf = 5 ),\n",
     "    SGD(random_state = 42),\n",
     "    GPC(1.0 * RBF(1.0)),\n",
@@ -179,110 +59,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
-    "classifiers_names = [\"Logistic Regression(Standard Scalar)\",\"Logistic Regression(MinMax Scalar)\",\"SVM\",\"SVM(polynomial kernel)\",\"SVM(RBF kernel)\",\"RandomForest\",\"Stocahastic gradient descent\",\"Gaussian Process Classifier\",\"Ada boost\",\"Naive bayes\",\"Decision Trees\"]"
+    "classifiers_names = [\"Logistic Regression(Standard Scalar)\",\"Logistic Regression(MinMax Scalar)\",\"SVM\",\"RandomForest\",\"Stocahastic gradient descent\",\"Gaussian Process Classifier\",\"Ada boost\",\"Naive bayes\",\"Decision Trees\"]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n",
-      "\n",
-      "For Classifier: Logistic Regression(Standard Scalar)\n",
-      "--------------------------------------\n",
-      "Accuracy: 0.633846153846154\n",
-      "Precision: 0.615806007226739\n",
-      "Recall: 0.5981151897169694\n",
-      "F1 - Score: 0.5987556280998904\n",
-      "\n",
-      "\n",
-      "For Classifier: Logistic Regression(MinMax Scalar)\n",
-      "--------------------------------------\n",
-      "Accuracy: 0.6061538461538462\n",
-      "Precision: 0.5841310541310542\n",
-      "Recall: 0.5612038066988012\n",
-      "F1 - Score: 0.5658289499318137\n",
-      "\n",
-      "\n",
-      "For Classifier: SVM\n",
-      "--------------------------------------\n",
-      "Accuracy: 0.6153846153846153\n",
-      "Precision: 0.599175717070454\n",
-      "Recall: 0.5661166728463725\n",
-      "F1 - Score: 0.5717814226003881\n",
-      "\n",
-      "\n",
-      "For Classifier: SVM(polynomial kernel)\n",
-      "--------------------------------------\n",
-      "Accuracy: 0.64\n",
-      "Precision: 0.6715852130325815\n",
-      "Recall: 0.4846866889136076\n",
-      "F1 - Score: 0.5564888106791802\n",
-      "\n",
-      "\n",
-      "For Classifier: SVM(RBF kernel)\n",
-      "--------------------------------------\n",
-      "Accuracy: 0.5200000000000001\n",
-      "Precision: 0.0\n",
-      "Recall: 0.0\n",
-      "F1 - Score: 0.0\n",
-      "\n",
-      "\n",
-      "For Classifier: RandomForest\n",
-      "--------------------------------------\n",
-      "Accuracy: 0.6430769230769231\n",
-      "Precision: 0.6375457875457876\n",
-      "Recall: 0.5769744160177975\n",
-      "F1 - Score: 0.6026418693767591\n",
-      "\n",
-      "\n",
-      "For Classifier: Stocahastic gradient descent\n",
-      "--------------------------------------\n",
-      "Accuracy: 0.5076923076923078\n",
-      "Precision: 0.3974825174825175\n",
-      "Recall: 0.788888888888889\n",
-      "F1 - Score: 0.525425726755514\n",
-      "\n",
-      "\n",
-      "For Classifier: Gaussian Process Classifier\n",
-      "--------------------------------------\n",
-      "Accuracy: 0.4953846153846154\n",
-      "Precision: 0.3627272727272728\n",
-      "Recall: 0.07094920281794585\n",
-      "F1 - Score: 0.11533738698731524\n",
-      "\n",
-      "\n",
-      "For Classifier: Ada boost\n",
-      "--------------------------------------\n",
-      "Accuracy: 0.6061538461538462\n",
-      "Precision: 0.5827933932193566\n",
-      "Recall: 0.6050055617352614\n",
-      "F1 - Score: 0.5908451417004049\n",
-      "\n",
-      "\n",
-      "For Classifier: Naive bayes\n",
-      "--------------------------------------\n",
-      "Accuracy: 0.5507692307692308\n",
-      "Precision: 0.5314168752607425\n",
-      "Recall: 0.7762884686688913\n",
-      "F1 - Score: 0.6208899122310164\n",
-      "\n",
-      "\n",
-      "For Classifier: Decision Trees\n",
-      "--------------------------------------\n",
-      "Accuracy: 0.6523076923076923\n",
-      "Precision: 0.6751167623164192\n",
-      "Recall: 0.5516067235199604\n",
-      "F1 - Score: 0.6011259972160221\n"
+      "Classifer : Logistic Regression(Standard Scalar)\n",
+      "Cross-Validation_scores are :[0.59183673 0.56701031 0.49484536 0.55670103 0.49484536] and it's average is: 0.5410477593099096 \n",
+      "Classifer : Logistic Regression(MinMax Scalar)\n",
+      "Cross-Validation_scores are :[0.62244898 0.64948454 0.46391753 0.67010309 0.50515464] and it's average is: 0.5822217546812539 \n",
+      "Classifer : SVM\n",
+      "Cross-Validation_scores are :[0.60204082 0.51546392 0.43298969 0.64948454 0.63917526] and it's average is: 0.5678308436776772 \n",
+      "Classifer : RandomForest\n",
+      "Cross-Validation_scores are :[0.63265306 0.62886598 0.46391753 0.70103093 0.58762887] and it's average is: 0.6028192720387124 \n",
+      "Classifer : Stocahastic gradient descent\n",
+      "Cross-Validation_scores are :[0.5        0.50515464 0.48453608 0.67010309 0.48453608] and it's average is: 0.5288659793814433 \n",
+      "Classifer : Gaussian Process Classifier\n",
+      "Cross-Validation_scores are :[0.51020408 0.50515464 0.49484536 0.50515464 0.50515464] and it's average is: 0.5041026719966337 \n",
+      "Classifer : Ada boost\n",
+      "Cross-Validation_scores are :[0.54081633 0.57731959 0.51546392 0.60824742 0.58762887] and it's average is: 0.565895224069009 \n",
+      "Classifer : Naive bayes\n",
+      "Cross-Validation_scores are :[0.58163265 0.58762887 0.50515464 0.54639175 0.62886598] and it's average is: 0.5699347780349253 \n",
+      "Classifer : Decision Trees\n",
+      "Cross-Validation_scores are :[0.63265306 0.6185567  0.56701031 0.54639175 0.71134021] and it's average is: 0.615190406059331 \n"
      ]
     }
    ],
@@ -290,27 +100,21 @@
     "idx = 0\n",
     "for clf in classifiers:\n",
     "    \n",
-    "    acc = []\n",
-    "    precision = []\n",
-    "    recall = []\n",
-    "    f1_list = []\n",
-    "    kf = KFold(n_splits=5)\n",
-    "    for train_index, test_index in kf.split(train_data):\n",
-    "        X_train_split, X_test_split = train_data.iloc[train_index][:], train_data.iloc[test_index][:]\n",
-    "        y_train_split, y_test_split = labels[train_index], labels[test_index]\n",
-    "        clf.fit(X_train_split,y_train_split)\n",
-    "        y_pred = clf.predict(X_test_split)\n",
-    "        acc.append(accuracy( y_test_split, y_pred ))\n",
-    "        precision.append(precision_score(y_test_split, y_pred))\n",
-    "        recall.append(recall_score(y_test_split, y_pred))\n",
-    "        f1_list.append(f1_score(y_test_split,y_pred))\n",
-    "    print(\"\\n\\nFor Classifier:\", classifiers_names[idx])\n",
-    "    print(\"--------------------------------------\")\n",
-    "    print(\"Accuracy:\", sum(acc)/len(acc))\n",
-    "    print(\"Precision:\", sum(precision)/len(precision))\n",
-    "    print(\"Recall:\", sum(recall)/len(recall))\n",
-    "    print(\"F1 - Score:\", sum(f1_list)/len(f1_list))\n",
-    "    idx += 1"
+    "    print(\"Classifer : {}\".format(classifiers_names[idx]))\n",
+    "    idx+=1\n",
+    "    scores = cross_val_score(clf,data.loc[:, data.columns != 'y'],data['y'],cv = 5,scoring = \"accuracy\")\n",
+    "    print(\"Cross-Validation_scores are :{} and it's average is: {} \".format(scores, sum(scores)/len(scores)))\n",
+    "#     clf.fit( x_train, y_train )\n",
+    "#     p = clf.predict_proba( x_test )[:,1]\n",
+    "#     p_bin = clf.predict( x_test )\n",
+    "\n",
+    "#     auc = AUC( y_test, p )\n",
+    "#     acc = accuracy( y_test, p_bin )\n",
+    "#     precision = precision_score(y_test, p_bin, average='weighted')\n",
+    "#     recall = recall_score(y_test, p_bin, average='weighted')\n",
+    "#     print( \"AUC: {:.2%}, accuracy: {:.2%} \\n\\n{}\\n\\n\".format( auc, acc, clf ))\n",
+    "#     print(\"Precision Score :\" + str(precision))\n",
+    "#     print(\"Recall Score : \" + str(recall))"
    ]
   },
   {
@@ -337,7 +141,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.5"
   }
  },
  "nbformat": 4,
