Created Train file

--- a/Classifiers.ipynb
+++ b/Classifiers.ipynb
@@ -562,6 +562,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "columns = X_train.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
    "outputs": [],
